@@ -1,3 +1,9 @@
+Wed, 31 Oct 2007 15:22:32 +0100 <thp@perli.net>
+Escape RSS-provided strings in Pango markup
+
+	* src/gpodder/gui.py: Escape strings in Pango markup
+	* bin/gpodder: we're in development again, so "+svn"
+
 Sun, 28 Oct 2007 16:27:14 +0100 <thp@perli.net>
 gPodder 0.10.1 "Nukular, das Wort heißt Nukular" released
 
